4.2.0.0/TRANSLATION_STATUS.zh-TW.md
# 翻譯狀態 (4.2.0.0)

> 🌐 [English](TRANSLATION_STATUS.md) | **繁體中文**

自 4.1.0.0 自動遷移：英文沒變動的 key 沿用上一版譯文；新增或變動的 key 標記為 `untranslated`（在譯者補上前先顯示英文）。

- 字串總數（兩專案合計）: 623
- 產生時間: 2026-08-13 13:23:33 +08:00

快速跳轉: [es-ES](#es-es) · [ru-RU](#ru-ru) · [tr-TR](#tr-tr)

## 整體（兩專案合計）

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 443 | 180 | 71% |
| ru-RU | 575 | 48 | 92% |
| tr-TR | 464 | 159 | 74% |

## 專案: OmniConsole

字串數: 581

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 428 | 153 | 73% |
| ru-RU | 553 | 28 | 95% |
| tr-TR | 444 | 137 | 76% |

## 專案: OmniConsole.PhantomLink

字串數: 42

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 15 | 27 | 35% |
| ru-RU | 22 | 20 | 52% |
| tr-TR | 20 | 22 | 47% |

## 待翻譯的 key

### es-ES

**OmniConsole**

新增 (27):
- `AdvancedSection_Overlay.Text`
- `OverlaySetting_ElevationNote.Text`
- `OverlaySetting_RtssNote.Text`
- `OverlaySetting_RtssStoppedNote.Text`
- `OverlayOsdSetting_Title.Text`
- `OverlayOsdSetting_Description.Text`
- `OverlayStatSetting_Title.Text`
- `OverlayStatSetting_Description.Text`
- `OverlayShadowSetting_Title.Text`
- `OverlayShadowSetting_Description.Text`
- `OverlayZoomSetting_Title.Text`
- `OverlayZoomSetting_Description.Text`
- `OverlayFpsLimitSetting_Title.Text`
- `OverlayFpsLimitSetting_Description.Text`
- `OverlayFpsLimit_Unlimited`
- `GamepadMappingModeSetting_BuiltInMappingProNote.Text`
- `BuiltInMappingEnableDialog_Title`
- `BuiltInMappingEnableDialog_Body`
- `BuiltInMappingEnableDialog_Confirm`
- `BuiltInMappingEnableDialog_Cancel`
- `Label_PhantomIgnis.Text`
- `GamingCapabilityDialog_Title`
- `GamingCapabilityDialog_Content`
- `GamingCapabilityDialog_Apply`
- `GamingCapabilityRestart_Title`
- `GamingCapabilityRestart_Content`
- `GamingCapabilityRestart_Close`

變動（需重譯） (126):
- `AdvancedSection_Steam.Text`
- `AdvancedSection_Nekomata.Text`
- `PhantomKeySetting_Title.Text`
- `PhantomKeySetting_Description.Text`
- `GamepadMappingModeSetting_Title.Text`
- `GamepadMappingModeSetting_Description.Text`
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `ControllerLayoutPresetSetting_Title.Text`
- `ControllerLayoutPresetSetting_Description.Text`
- `ControllerLayoutPresetItem_OmniNav`
- `ControllerLayoutPresetItem_Classic`
- `ControllerLayoutPresetItem_Custom`
- `ControllerLayoutPresetEditButton.Content`
- `Label_ElevatedAppSupportService.Text`
- `ElevatedServiceHealth_Running`
- `ElevatedServiceHealth_NotRunning`
- `Label_PhantomSigil.Text`
- `GamepadProfile_BlockNativeGamepadInput_Note.Text`
- `GamepadProfile_MappingServicePriority_Title.Text`
- `GamepadProfile_MappingServicePriority_Description.Text`
- `GamepadProcessPriority_Standard`
- `GamepadProcessPriority_Performance`
- `GamepadRepeatToggle.Content`
- `GamepadMappingClearAllConfirmBody`
- `GamepadMappingResetCustomButton.Content`
- `GamepadMappingResetCustomConfirmTitle`
- `GamepadMappingResetCustomConfirmBody`
- `GamepadMappingResetCustomConfirmYes`
- `GamepadMappingCustomLayoutTitle`
- `GamepadMappingCustomLayoutSubtitle`
- `GamepadMappingCustomLayoutEmptyTitle`
- `GamepadMappingCustomLayoutEmptyBody`
- `GamepadMappingCustomLayoutEmptyYes`
- `GamepadAction_GamepadKeyboard`
- `GamepadAction_OnScreenKeyboard`
- `GamepadMappingEmptyConfirmBody`
- `GamepadMappingEmptyRemoveBody`
- `ManageLanguages_OfflineNotice`
- `CommunityPlatformsButton.Content`
- `CommunityPlatforms_Title`
- `CommunityPlatforms_Loading`
- `CommunityPlatforms_Error`
- `CommunityPlatforms_Empty`
- `CommunityPlatforms_SchemaTooNew`
- `CommunityPlatforms_SearchPlaceholder`
- `CommunityPlatforms_SortNewest`
- `CommunityPlatforms_SortOldest`
- `CommunityPlatforms_SelectHint`
- `CommunityPlatforms_NoResults`
- `CommunityPlatforms_Submitter`
- `CommunityPlatforms_SubmitterDate`
- `CommunityPlatforms_NotDetected`
- `CommunityPlatforms_Action_Add`
- `CommunityPlatforms_Result_Added`
- `Import_Error_PackageNotInstalled`
- `CommunityPlatforms_CheckingUpdates`
- `CommunityPlatforms_OfflineNotice`
- `Import_Error_ExecutableNotFound`
- `Nav_Pro.Content`
- `ProTitle`
- `ProDescription.Text`
- `ProSection_Unlock.Text`
- `ProSection_Status.Text`
- `ProSection_Manage.Text`
- `ProSection_Features.Text`
- `ProUnlockCard_Title.Text`
- `ProUnlockCard_Description.Text`
- `ProUnlockCard_Note.Text`
- `ProSponsorButton.Content`
- `ProEnterKeyButton.Content`
- `ProStatusCard_Title.Text`
- `ProStatusLabel_LicensedTo.Text`
- `ProStatusLabel_Serial.Text`
- `ProStatusLabel_Issued.Text`
- `ProManageCard_Title.Text`
- `ProManageCard_Description.Text`
- `ProRemoveButton.Content`
- `ProFeaturesCard_Title.Text`
- `ProLicenseDialog_Title`
- `ProLicenseDialog_Hint`
- `ProLicenseDialog_Placeholder`
- `ProLicenseDialog_ImportFile`
- `ProLicenseDialog_Primary`
- `ProLicenseDialog_Cancel`
- `ProLicense_FileFilter`
- `ProRemoveDialog_Title`
- `ProRemoveDialog_Body`
- `ProRemoveDialog_Confirm`
- `ProRemoveDialog_Cancel`
- `ProLicense_Success`
- `ProLicense_Error_Empty`
- `ProLicense_Error_Malformed`
- `ProLicense_Error_UnknownFormat`
- `ProLicense_Error_UnknownKeyId`
- `ProLicense_Error_UnknownProduct`
- `ProLicense_Error_BadSignature`
- `ProLicense_Error_Revoked`
- `ProLicense_Error_VersionExceeded`
- `ProLicense_Error_FileUnreadable`
- `ProLicense_Error_FileNotLicense`
- `ProLicense_Error_AlreadyImported`
- `ProLicense_Error_UnknownEntitlement`
- `ProAddLicenseButton.Content`
- `ProEntitlement_Pro`
- `ProEntitlement_Owned`
- `ProEntitlement_NotOwned`
- `ProEntitlementRemove`
- `ProRemoveDialog_BodyOne`
- `ProRemoveDialog_BodyPro`
- `ProLicense_Error_RequiresPro`
- `ProManageCard_Note.Text`
- `ElevatedAppSupportSetting_Title.Text`
- `ElevatedAppSupportSetting_Description.Text`
- `ElevatedAppSupport_Install`
- `ElevatedAppSupport_Remove`
- `ElevatedAppSupportRemoveDialog_Title`
- `ElevatedAppSupportRemoveDialog_Body`
- `ElevatedAppSupportRemoveDialog_Confirm`
- `ElevatedAppSupportRemoveDialog_Cancel`
- `ElevatedServiceUpdateDialog_Title`
- `ElevatedServiceUpdateDialog_Content`
- `ElevatedServiceUpdateDialog_Update`
- `ElevatedAppSupportUnavailableDialog_Title`
- `ElevatedAppSupportUnavailableDialog_Body`
- `ElevatedAppSupportUnavailableDialog_Close`

**OmniConsole.PhantomLink**

新增 (19):
- `Widget_BuiltInMappingProNote.Text`
- `Widget_BuiltInMappingConfirm_Title.Text`
- `Widget_BuiltInMappingConfirm_Body.Text`
- `Widget_BuiltInMappingConfirm_Confirm.Content`
- `Widget_BuiltInMappingConfirm_Cancel.Content`
- `Widget_Page_Main.Content`
- `Widget_Page_Overlay.Content`
- `Widget_Overlay_Title.Text`
- `Widget_Overlay_ElevationNote.Text`
- `Widget_Overlay_RtssNote.Text`
- `Widget_Overlay_RtssStoppedNote.Text`
- `Widget_Overlay_Off.Content`
- `Widget_Overlay_On.Content`
- `Widget_Overlay_Osd_Title.Text`
- `Widget_Overlay_Stat_Title.Text`
- `Widget_Overlay_Shadow_Title.Text`
- `Widget_Overlay_Zoom_Title.Text`
- `Widget_Overlay_FpsLimit_Title.Text`
- `Widget_Overlay_FpsLimit_Unlimited`

變動（需重譯） (8):
- `Widget_GamepadMappingMode_Title.Text`
- `Widget_Mode_On.Content`
- `Widget_ControllerLayoutPreset_Title.Text`
- `Widget_ControllerLayoutPreset_OmniNav.Content`
- `Widget_ControllerLayoutPreset_Classic.Content`
- `Widget_ControllerLayoutPreset_Custom.Content`
- `Widget_BuiltInMappingNote.Text`
- `Widget_CustomizeApp_ElevatedNote.Text`

### ru-RU

**OmniConsole**

新增 (27):
- `AdvancedSection_Overlay.Text`
- `OverlaySetting_ElevationNote.Text`
- `OverlaySetting_RtssNote.Text`
- `OverlaySetting_RtssStoppedNote.Text`
- `OverlayOsdSetting_Title.Text`
- `OverlayOsdSetting_Description.Text`
- `OverlayStatSetting_Title.Text`
- `OverlayStatSetting_Description.Text`
- `OverlayShadowSetting_Title.Text`
- `OverlayShadowSetting_Description.Text`
- `OverlayZoomSetting_Title.Text`
- `OverlayZoomSetting_Description.Text`
- `OverlayFpsLimitSetting_Title.Text`
- `OverlayFpsLimitSetting_Description.Text`
- `OverlayFpsLimit_Unlimited`
- `GamepadMappingModeSetting_BuiltInMappingProNote.Text`
- `BuiltInMappingEnableDialog_Title`
- `BuiltInMappingEnableDialog_Body`
- `BuiltInMappingEnableDialog_Confirm`
- `BuiltInMappingEnableDialog_Cancel`
- `Label_PhantomIgnis.Text`
- `GamingCapabilityDialog_Title`
- `GamingCapabilityDialog_Content`
- `GamingCapabilityDialog_Apply`
- `GamingCapabilityRestart_Title`
- `GamingCapabilityRestart_Content`
- `GamingCapabilityRestart_Close`

變動（需重譯） (1):
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`

**OmniConsole.PhantomLink**

新增 (19):
- `Widget_BuiltInMappingProNote.Text`
- `Widget_BuiltInMappingConfirm_Title.Text`
- `Widget_BuiltInMappingConfirm_Body.Text`
- `Widget_BuiltInMappingConfirm_Confirm.Content`
- `Widget_BuiltInMappingConfirm_Cancel.Content`
- `Widget_Page_Main.Content`
- `Widget_Page_Overlay.Content`
- `Widget_Overlay_Title.Text`
- `Widget_Overlay_ElevationNote.Text`
- `Widget_Overlay_RtssNote.Text`
- `Widget_Overlay_RtssStoppedNote.Text`
- `Widget_Overlay_Off.Content`
- `Widget_Overlay_On.Content`
- `Widget_Overlay_Osd_Title.Text`
- `Widget_Overlay_Stat_Title.Text`
- `Widget_Overlay_Shadow_Title.Text`
- `Widget_Overlay_Zoom_Title.Text`
- `Widget_Overlay_FpsLimit_Title.Text`
- `Widget_Overlay_FpsLimit_Unlimited`

變動（需重譯） (1):
- `Widget_BuiltInMappingNote.Text`

### tr-TR

**OmniConsole**

新增 (27):
- `AdvancedSection_Overlay.Text`
- `OverlaySetting_ElevationNote.Text`
- `OverlaySetting_RtssNote.Text`
- `OverlaySetting_RtssStoppedNote.Text`
- `OverlayOsdSetting_Title.Text`
- `OverlayOsdSetting_Description.Text`
- `OverlayStatSetting_Title.Text`
- `OverlayStatSetting_Description.Text`
- `OverlayShadowSetting_Title.Text`
- `OverlayShadowSetting_Description.Text`
- `OverlayZoomSetting_Title.Text`
- `OverlayZoomSetting_Description.Text`
- `OverlayFpsLimitSetting_Title.Text`
- `OverlayFpsLimitSetting_Description.Text`
- `OverlayFpsLimit_Unlimited`
- `GamepadMappingModeSetting_BuiltInMappingProNote.Text`
- `BuiltInMappingEnableDialog_Title`
- `BuiltInMappingEnableDialog_Body`
- `BuiltInMappingEnableDialog_Confirm`
- `BuiltInMappingEnableDialog_Cancel`
- `Label_PhantomIgnis.Text`
- `GamingCapabilityDialog_Title`
- `GamingCapabilityDialog_Content`
- `GamingCapabilityDialog_Apply`
- `GamingCapabilityRestart_Title`
- `GamingCapabilityRestart_Content`
- `GamingCapabilityRestart_Close`

變動（需重譯） (110):
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `ControllerLayoutPresetItem_Custom`
- `ControllerLayoutPresetEditButton.Content`
- `Label_ElevatedAppSupportService.Text`
- `ElevatedServiceHealth_Running`
- `ElevatedServiceHealth_NotRunning`
- `Label_PhantomSigil.Text`
- `GamepadMappingClearAllConfirmBody`
- `GamepadMappingResetCustomButton.Content`
- `GamepadMappingResetCustomConfirmTitle`
- `GamepadMappingResetCustomConfirmBody`
- `GamepadMappingResetCustomConfirmYes`
- `GamepadMappingCustomLayoutTitle`
- `GamepadMappingCustomLayoutSubtitle`
- `GamepadMappingCustomLayoutEmptyTitle`
- `GamepadMappingCustomLayoutEmptyBody`
- `GamepadMappingCustomLayoutEmptyYes`
- `GamepadAction_GamepadKeyboard`
- `GamepadAction_OnScreenKeyboard`
- `GamepadMappingEmptyConfirmBody`
- `GamepadMappingEmptyRemoveBody`
- `ManageLanguages_OfflineNotice`
- `CommunityPlatformsButton.Content`
- `CommunityPlatforms_Title`
- `CommunityPlatforms_Loading`
- `CommunityPlatforms_Error`
- `CommunityPlatforms_Empty`
- `CommunityPlatforms_SchemaTooNew`
- `CommunityPlatforms_SearchPlaceholder`
- `CommunityPlatforms_SortNewest`
- `CommunityPlatforms_SortOldest`
- `CommunityPlatforms_SelectHint`
- `CommunityPlatforms_NoResults`
- `CommunityPlatforms_Submitter`
- `CommunityPlatforms_SubmitterDate`
- `CommunityPlatforms_NotDetected`
- `CommunityPlatforms_Action_Add`
- `CommunityPlatforms_Result_Added`
- `Import_Error_PackageNotInstalled`
- `CommunityPlatforms_CheckingUpdates`
- `CommunityPlatforms_OfflineNotice`
- `Import_Error_ExecutableNotFound`
- `Nav_Pro.Content`
- `ProTitle`
- `ProDescription.Text`
- `ProSection_Unlock.Text`
- `ProSection_Status.Text`
- `ProSection_Manage.Text`
- `ProSection_Features.Text`
- `ProUnlockCard_Title.Text`
- `ProUnlockCard_Description.Text`
- `ProUnlockCard_Note.Text`
- `ProSponsorButton.Content`
- `ProEnterKeyButton.Content`
- `ProStatusCard_Title.Text`
- `ProStatusLabel_LicensedTo.Text`
- `ProStatusLabel_Serial.Text`
- `ProStatusLabel_Issued.Text`
- `ProManageCard_Title.Text`
- `ProManageCard_Description.Text`
- `ProRemoveButton.Content`
- `ProFeaturesCard_Title.Text`
- `ProLicenseDialog_Title`
- `ProLicenseDialog_Hint`
- `ProLicenseDialog_Placeholder`
- `ProLicenseDialog_ImportFile`
- `ProLicenseDialog_Primary`
- `ProLicenseDialog_Cancel`
- `ProLicense_FileFilter`
- `ProRemoveDialog_Title`
- `ProRemoveDialog_Body`
- `ProRemoveDialog_Confirm`
- `ProRemoveDialog_Cancel`
- `ProLicense_Success`
- `ProLicense_Error_Empty`
- `ProLicense_Error_Malformed`
- `ProLicense_Error_UnknownFormat`
- `ProLicense_Error_UnknownKeyId`
- `ProLicense_Error_UnknownProduct`
- `ProLicense_Error_BadSignature`
- `ProLicense_Error_Revoked`
- `ProLicense_Error_VersionExceeded`
- `ProLicense_Error_FileUnreadable`
- `ProLicense_Error_FileNotLicense`
- `ProLicense_Error_AlreadyImported`
- `ProLicense_Error_UnknownEntitlement`
- `ProAddLicenseButton.Content`
- `ProEntitlement_Pro`
- `ProEntitlement_Owned`
- `ProEntitlement_NotOwned`
- `ProEntitlementRemove`
- `ProRemoveDialog_BodyOne`
- `ProRemoveDialog_BodyPro`
- `ProLicense_Error_RequiresPro`
- `ProManageCard_Note.Text`
- `ElevatedAppSupportSetting_Title.Text`
- `ElevatedAppSupportSetting_Description.Text`
- `ElevatedAppSupport_Install`
- `ElevatedAppSupport_Remove`
- `ElevatedAppSupportRemoveDialog_Title`
- `ElevatedAppSupportRemoveDialog_Body`
- `ElevatedAppSupportRemoveDialog_Confirm`
- `ElevatedAppSupportRemoveDialog_Cancel`
- `ElevatedServiceUpdateDialog_Title`
- `ElevatedServiceUpdateDialog_Content`
- `ElevatedServiceUpdateDialog_Update`
- `ElevatedAppSupportUnavailableDialog_Title`
- `ElevatedAppSupportUnavailableDialog_Body`
- `ElevatedAppSupportUnavailableDialog_Close`

**OmniConsole.PhantomLink**

新增 (19):
- `Widget_BuiltInMappingProNote.Text`
- `Widget_BuiltInMappingConfirm_Title.Text`
- `Widget_BuiltInMappingConfirm_Body.Text`
- `Widget_BuiltInMappingConfirm_Confirm.Content`
- `Widget_BuiltInMappingConfirm_Cancel.Content`
- `Widget_Page_Main.Content`
- `Widget_Page_Overlay.Content`
- `Widget_Overlay_Title.Text`
- `Widget_Overlay_ElevationNote.Text`
- `Widget_Overlay_RtssNote.Text`
- `Widget_Overlay_RtssStoppedNote.Text`
- `Widget_Overlay_Off.Content`
- `Widget_Overlay_On.Content`
- `Widget_Overlay_Osd_Title.Text`
- `Widget_Overlay_Stat_Title.Text`
- `Widget_Overlay_Shadow_Title.Text`
- `Widget_Overlay_Zoom_Title.Text`
- `Widget_Overlay_FpsLimit_Title.Text`
- `Widget_Overlay_FpsLimit_Unlimited`

變動（需重譯） (3):
- `Widget_ControllerLayoutPreset_Custom.Content`
- `Widget_BuiltInMappingNote.Text`
- `Widget_CustomizeApp_ElevatedNote.Text`
